# SciVQA_Repo

./: .gitignore  README.md  finetuneEvalLoop.py
Combine_Datasets/: ArxivDatasetAligner.py  (+11 more)
Evaluation/: SciVQAResultFileCreator.py  jsonShorter.py  mlflowCorrection.py  pyproject.toml  resultFormatter.py  start_vllm_server_as_process.py
Evaluation/Manual_Evaluation/: accuracyCalculator.py  manualAnnotation.py
Evaluation/Manual_Evaluation/Inference_logs/test set/: jsonFixer.py
Evaluation/Manual_Evaluation/Inference_logs/validation set/: inference_log_7B_zero_shot_sys11_v7_auf_val_set.json  inference_log_7B_zero_shot_sys11_v7_auf_val_set_annotated.json  inference_log_GPT4Mini_sys11_v7_Auf_Val_annotated.json  inference_log_GPT4oMiniOneShotAusValAnnotated.json  (+5 more)
Evaluation/Manual_Evaluation/utils/: FigureTypeRatioFinder.py  answerLengthFinder.py  datasetLengthFinder.py  multChoiceWithMultOptionsAnswerCounter.py
Evaluation/conf/: defaults.yaml  defaults2.yaml
Evaluation/conf/dataset/: arxivQATestSubset.yaml  arxivQATestset.yaml  scivqa.yaml  scivqaBaseline1.yaml  scivqaBaseline1Test.yaml  scivqaJsonOutput.yaml  scivqaJsonOutputMitTicks.yaml  scivqaOutputFormat.yaml  scivqaOutputFormatTest.yaml  spiqaOutputFormatTest.yaml
Evaluation/conf/mlflow/: scivqa.yaml
Evaluation/conf/model/: gpt-4o-mini.yaml  gpt-4o.yaml  qwen2-7B.yaml  qwen2_5-VL-32B-Instruct-finetuned.yaml  qwen2_5-VL-32B-Instruct.yaml  qwen2_5-VL-7B-Instruct-16bit.yaml  qwen2_5-VL-7B-Instruct-bnb-4bit-fintuned-changedParams.yaml  qwen2_5-VL-7B-Instruct-bnb-4bit-fintuned-with-caption.yaml  qwen2_5-VL-7B-Instruct-bnb-4bit-fintuned2.yaml  qwen2_5-VL-7B-Instruct-bnb-4bit.yaml  qwen2_5-VL-7B-Instruct.yaml  qwen_finetune_2.yaml
Evaluation/data/arxiv_qa/: filteredDatasetLCSS6ProcessedForHyperparametertuning_1680_subset_of_test_split.json
Evaluation/data/spiqa/: SPIQA_test_split.json
Evaluation/src/scivqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+77 files in other folders)
